// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Component > Snapshots > default button snapshot 1`] = `
<button
  class="inline-flex items-center justify-center font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary/50 disabled:opacity-60 disabled:cursor-not-allowed bg-gradient-primary text-white shadow-modern hover:shadow-modern-hover hover:brightness-105 text-sm px-4 py-2 rounded-lg "
  type="button"
>
  Default Button
</button>
`;

exports[`Button Component > Snapshots > disabled button snapshot 1`] = `
<button
  class="inline-flex items-center justify-center font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary/50 disabled:opacity-60 disabled:cursor-not-allowed bg-gradient-primary text-white shadow-modern hover:shadow-modern-hover hover:brightness-105 text-sm px-4 py-2 rounded-lg "
  disabled=""
  type="button"
>
  Disabled Button
</button>
`;

exports[`Button Component > Snapshots > ghost variant button snapshot 1`] = `
<button
  class="inline-flex items-center justify-center font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary/50 disabled:opacity-60 disabled:cursor-not-allowed text-indigo-600 hover:text-indigo-800 hover:bg-indigo-50 text-sm px-4 py-2 rounded-lg "
  type="button"
>
  Ghost Button
</button>
`;

exports[`Button Component > Snapshots > outline variant button snapshot 1`] = `
<button
  class="inline-flex items-center justify-center font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary/50 disabled:opacity-60 disabled:cursor-not-allowed border border-indigo-300 text-indigo-700 bg-white hover:bg-indigo-50 hover:text-primary-dark text-sm px-4 py-2 rounded-lg "
  type="button"
>
  Outline Button
</button>
`;

exports[`Button Component > Snapshots > pill button snapshot 1`] = `
<button
  class="inline-flex items-center justify-center font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary/50 disabled:opacity-60 disabled:cursor-not-allowed bg-gradient-primary text-white shadow-modern hover:shadow-modern-hover hover:brightness-105 text-sm px-4 py-2 rounded-full "
  type="button"
>
  Pill Button
</button>
`;

exports[`Button Component > Snapshots > primary variant button snapshot 1`] = `
<button
  class="inline-flex items-center justify-center font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary/50 disabled:opacity-60 disabled:cursor-not-allowed bg-gradient-primary text-white shadow-modern hover:shadow-modern-hover hover:brightness-105 text-sm px-4 py-2 rounded-lg "
  type="button"
>
  Primary Button
</button>
`;

exports[`Button Component > Snapshots > secondary variant button snapshot 1`] = `
<button
  class="inline-flex items-center justify-center font-medium transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary/50 disabled:opacity-60 disabled:cursor-not-allowed bg-gradient-secondary text-white shadow-modern hover:shadow-modern-hover hover:brightness-105 text-sm px-4 py-2 rounded-lg "
  type="button"
>
  Secondary Button
</button>
`;
